@@ -3,6 +3,7 @@ Version 1.0.9 (February xxh 2013)
 - Fixed Dimmer slider (had a hardcoded device index)
 - Fixed Edit Lights/Switches Smoke Detector type
 - Solved HTML checkbox 'ischecked' property duo upgrade to new JQuery
+- P1 Smart meter, Gas value now send when changed, or every 5 minutes
 
 Version 1.0.8 (February 3th 2013)
 - Fixed Hardware Enabled/Disabled option
